fixed flrig link

--- a/content/3.rig-control/1.getting-started.md
+++ b/content/3.rig-control/1.getting-started.md
@@ -8,7 +8,7 @@ FLRIG is a free, lightweight software that provides a simple interface to commun
 
 You can download FLRIG from the following official sources:
 
-• Windows, MacOS, and Linux: [Download FLRIG](http://www.w1hkj.com/files/FLRIG)
+• Windows, MacOS, and Linux: [Download FLRIG](http://www.w1hkj.com/files/flrig/)
 
 Make sure to select the appropriate version for your operating system and follow the installation instructions provided.
 
